--- a/src/Component/Carasul/Carasul.scss
+++ b/src/Component/Carasul/Carasul.scss
@@ -1,6 +1,7 @@
 @import "../../mixins.scss";
 .carousel {
     margin-bottom: 50px;
+    width: 100%;
     .contentWrapper {
         position: relative;
     }
